...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.MisLigasFragment">

    <!-- Botones -->
    <Button
        android:id="@+id/btnCrearLiga"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#3E9B04"
        android:text="Crear nueva liga"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnSimularPartido"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#0061A9"
        android:text="Simular jornada"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnTerminarLiga"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#B90B0B"
        android:text="Terminar liga"
        android:textColor="#FFFFFF" />

    <!-- Título de Noticias -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
...
