...
    tools:context=".view.fragments.CrearLigaPersonalizadaFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="440dp"
            android:layout_height="395dp"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Liga" />

            <EditText
                android:id="@+id/editTextNumJornadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:hint="Ingrese el número de jornadas"
                android:inputType="numberDecimal"
                android:minHeight="64dp"
                android:textColor="#FF0000"
                android:textColorHint="#A9A9A9"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnConfirmarLigaP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_rounded_background"
                android:backgroundTint="#3E9B04"
                android:gravity="center"
                android:text="Confirmar"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnAtrasLigaP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.507"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextNombreLiga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Ingrese el nombre de la liga"
            android:inputType="text"
            android:minHeight="48dp"
...
